start working on front end of project

--- a/my-vue-app/index.html
+++ b/my-vue-app/index.html
@@ -6,8 +6,26 @@
 
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <div class="header">
+      <h1>Welcome to Sift!</h1>
+    </div>
+    <div class = mainBody>
+      <div class="navbar">
+        <!-- <h2>Navbar</h2>s -->
+        <h3> Auto-grader</h3>
+        <h3> About</h3>
+        <hr>
+        <h3> Settings</h3>
+        <h3> Shutdown</h3>
+        
+      </div>
+      <div class="mainContent">
+        <h2>mainContent</h2>
+      </div>
+    </div>
+
+
+
     <script type="module" src="/src/renderer.js"></script>
   </body>
 </html>
